fixing Overflow issue

--- a/src/components/DescSection/descSection.scss
+++ b/src/components/DescSection/descSection.scss
@@ -4,72 +4,84 @@
     position: relative;
     z-index: 4;
 }
-
 @keyframes revolve {
     0% {
         transform: rotate(0deg) translateX(100px) rotate(0deg);
     }
-
     100% {
         transform: rotate(360deg) translateX(100px) rotate(-360deg);
     }
 }
-
 .nostalgia-heading {
     font-size: 2em;
     font-weight: bold;
-    color: #ff6600;
+    color: greenyellow;
     margin-bottom: 10px;
 }
-
 .nostalgia-subheading {
     font-size: 1.5em;
-    color: #ffaa00;
+    color: greenyellow;
+    font-weight: 600;
 }
-
 .icon-container {
     position: relative;
     margin-top: 20px;
 }
-
 .icon-container i {
     position: absolute;
     font-size: 1.9em;
-    color: #ff6600;
+    color: greenyellow;
 }
-
 .headingIcon {
     color: white;
 }
-
 .icon-container i:nth-child(1) {
     top: 2rem;
     left: calc(50% - 20px);
     animation-delay: 0s;
     animation: revolve 7s linear infinite;
-
+    color: yellow !important;
+    z-index: 10;
 }
-
 .icon-container i:nth-child(2) {
     top: 2rem;
     left: 15%;
     animation-delay: 1s;
     animation: revolve 10s linear infinite;
+    color: red !important;
+    z-index: 10;
 }
-
 .icon-container i:nth-child(3) {
     top: 2rem;
     right: 12%;
     animation-delay: 1.5s;
     animation: revolve 15s linear infinite;
+    color: pink !important;
+    z-index: 10;
 }
-
 @media (max-width:486px) {
     .nostalgia-heading {
-        font-size: 1.5em;
+        font-size: 1.2em;
         font-weight: bold;
-        color: #ff6600;
+        color: greenyellow;
         margin-bottom: 20px;
     }
+    .nostalgia-subheading {
+        font-size: 1.2em;
+    }
 }
-
+@media (max-width: 970px) {
+    .icon-container i:nth-child(3) {
+        display: none;
+    }
+    .icon-container i:nth-child(1) {
+        top: 2.5rem;
+        left: 15%;
+    }
+    .icon-container i:nth-child(2) {
+        top: 2.5rem;
+        left: 80%;
+        animation-delay: 1s;
+        animation: revolve 10s linear infinite;
+    }
+}
