--- a/src/components/titleSection/titleSection.scss
+++ b/src/components/titleSection/titleSection.scss
@@ -49,7 +49,7 @@
 
 @media (max-width: 420px) {
   .title {
-    font-size: 1.2em;
+    font-size: 1.5em;
   }
   .title-section {
     height: 15vh;
